<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/no_connection_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="?attr/wifi_background_color"
                android:contentDescription="@string/image_description" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sukhumvittadmai_normal"
                android:text="@string/wake_up_connection"
                android:textColor="?attr/movie_title_background_color"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/sukhumvittadmai_normal"
                android:text="@string/no_internet"
                android:textSize="@dimen/_11sdp"
                android:textColor="?attr/movie_title_background_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sukhumvittadmai_normal"
                android:text="@string/check_connection"
                android:textSize="@dimen/_11sdp"
                android:textColor="?attr/movie_title_background_color"/>

            <TextView
                android:id="@+id/retry_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/sukhumvittadmai_bold"
                android:background="@drawable/rounded_button"
                android:paddingStart="@dimen/_40sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/retry"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />
            <TextView
                android:id="@+id/btn_my_downloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/sukhumvittadmai_bold"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_20sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:focusable="true"
                android:clickable="true"
                android:visibility="invisible"
                android:text="@string/go_to_my_downloads"
                android:textColor="@color/description_title_yellow"
                android:textSize="@dimen/_15sdp" />



        </LinearLayout>
    </RelativeLayout>

</layout>