<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="downloadStatus"
            type="me.vipa.app.enums.DownloadStatus" />

        <variable
            name="isDownloadable"
            type="Boolean" />

        <variable
            name="isKidsMode"
            type="Boolean" />

        <import type="android.view.View" />

        <import type="me.vipa.app.enums.DownloadStatus" />
    </data>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/watchList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <me.vipa.app.utils.CustomProgressBar
                    android:id="@+id/w_progress_bar"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="@dimen/watch_ListWidth"
                    android:layout_height="@dimen/watch_ListHeight"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/NontonSize6"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/addIcon"
                    android:layout_width="@dimen/watch_ListWidth"
                    android:layout_height="@dimen/watch_ListHeight"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/NontonSize6"
                    android:contentDescription="@string/watchlist"
                    app:srcCompat="?attr/watchlist_icon_color" />

                <TextView
                    android:id="@+id/tvWatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sukhumvittadmai_medium"
                    android:gravity="center"
                    android:text="@string/watchlist"
                    android:textColor="?attr/watchlist_icon_text"
                    android:textSize="@dimen/font_small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <me.vipa.app.utils.CustomProgressBar
                    android:id="@+id/l_progress_bar"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="@dimen/watchListWidth"
                    android:layout_height="@dimen/watchListHeight"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/NontonSize8"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/likeIcon"
                    android:layout_width="@dimen/watchListWidth"
                    android:layout_height="@dimen/watchListHeight"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_margin="@dimen/NontonSize8"
                    android:contentDescription="@string/like"
                    app:srcCompat="?attr/like_icon" />

                <TextView
                    android:id="@+id/tvLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sukhumvittadmai_medium"
                    android:gravity="center"
                    android:text="@string/like"
                    android:textColor="?attr/watchlist_icon_text"
                    android:textSize="@dimen/font_small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/shareWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/watchListWidth"
                    android:layout_height="@dimen/watchListHeight"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/NontonSize8"
                    android:contentDescription="@string/share"
                    app:srcCompat="?attr/share_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sukhumvittadmai_medium"
                    android:gravity="center"
                    android:text="@string/share"
                    android:textColor="?attr/watchlist_icon_text"
                    android:textSize="@dimen/font_small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/download_video"
                    android:layout_width="@dimen/watchListWidth"
                    android:layout_height="@dimen/watchListHeight"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/NontonSize8"
                    android:contentDescription="@string/download"
                    android:visibility='@{downloadStatus==DownloadStatus.START ? View.VISIBLE : View.GONE, default="gone"}'
                    tools:visibility="visible" />

                <me.vipa.app.utils.DownloadProgressBar
                    android:id="@+id/video_downloading"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/NontonSize8"
                    android:visibility='@{downloadStatus==DownloadStatus.DOWNLOADING ? View.VISIBLE : View.GONE, default="gone"}'
                    app:background_progressbar_color="@android:color/darker_gray"
                    app:progressbar_color="@color/description_title_yellow" />

                <ImageView
                    android:id="@+id/video_downloaded"
                    android:layout_width="@dimen/watchListWidth"
                    android:layout_height="@dimen/watchListHeight"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/NontonSize8"
                    android:contentDescription="@string/download"
                    android:visibility='@{downloadStatus==DownloadStatus.DOWNLOADED ? View.VISIBLE : View.GONE, default="gone"}'
                    app:srcCompat="@drawable/download_icon" />

                <ImageView
                    android:id="@+id/pause_download"
                    android:layout_width="@dimen/watchListWidth"
                    android:layout_height="@dimen/watchListHeight"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/NontonSize8"
                    android:contentDescription="@string/pause_download"
                    android:visibility='@{downloadStatus==DownloadStatus.PAUSE ? View.VISIBLE : View.GONE, default="gone"}'
                    app:srcCompat="?attr/pause_download" />

                <ProgressBar
                    android:id="@+id/loading_download"
                    android:layout_width="@dimen/watch_ListWidth"
                    android:layout_height="@dimen/watch_ListWidth"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/NontonSize5"
                    android:visibility='@{downloadStatus==DownloadStatus.REQUESTED ? View.VISIBLE : View.GONE, default="gone"}' />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sukhumvittadmai_medium"
                    android:gravity="center"
                    android:text="@string/download"
                    android:textColor="?attr/watchlist_icon_text"
                    android:textSize="@dimen/font_small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/show_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/watchListWidth"
                    android:layout_height="@dimen/watchListHeight"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/NontonSize8"
                    android:contentDescription="@string/comments"
                    app:srcCompat="@drawable/chat_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sukhumvittadmai_medium"
                    android:gravity="center"
                    android:text="@string/comments"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/iv_trailer"
                    android:layout_width="@dimen/watchListWidth"
                    android:layout_height="@dimen/watchListHeight"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/NontonSize8"
                    android:contentDescription="@string/trailer"
                    app:srcCompat="@drawable/ic_trailer" />

                <TextView
                    android:id="@+id/tv_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sukhumvittadmai_medium"
                    android:gravity="center"
                    android:text="@string/trailer"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_small" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</layout>
